Update Floodlight Verification Tool (Google Place API via Google Cloud)-checkpoint.ipynb

--- a/Floodlight Verification Tool (Google Place API via Google Cloud)-checkpoint.ipynb
+++ b/Floodlight Verification Tool (Google Place API via Google Cloud)-checkpoint.ipynb
@@ -19,7 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "api_key = \"AIzaSyBgt6yN4ThssEanoCSEy9BMzU3oNZsZ8GA\""
+    "api_key = \"\""
    ]
   },
   {
