--- a/Floodlight Verification Tool (Google Place API via Google Cloud)-checkpoint.ipynb
+++ b/Floodlight Verification Tool (Google Place API via Google Cloud)-checkpoint.ipynb
@@ -69,7 +69,7 @@
     "\n",
     "    return full_addresses\n",
     "\n",
-    "def extract_lat_lng(address, data_type='json', api_key = \"AIzaSyBgt6yN4ThssEanoCSEy9BMzU3oNZsZ8GA\"):\n",
+    "def extract_lat_lng(address, data_type='json', api_key = \"\"):\n",
     "    endpoint = f\"https://maps.googleapis.com/maps/api/geocode/{data_type}\"\n",
     "    params = {\"address\": address, \"key\": api_key}\n",
     "    url_params = urlencode(params)\n",
